data/derived/fa15/progs/unify/prog0508.ml.out
Characters 12-13:
  let _ = tan 1;;
              ^
Error: This expression has type int but an expression was expected of type
         float
